k8s/coma/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: navidrome
  annotions:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "music.artichokenetwork.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: navidrome
                port:
                  number: 4533
  tls:
  - hosts:
    - "music.artichokenetwork.com"
    secretName: artichokenetwork-cert
